# ProteinStructureVisualizer

./: LICENSE  README.md
docs/: BIOEN537 ProteinStructureVisualizer Presentation_SRL.pptx  BIOEN537 ProteinStructureVisualizer_Component Specifications.docx  BIOEN537 ProteinStructureVisualizer_Functional Specifications.docx
src/: .gitignore  __init__.py  main.py  pyproject.toml
tests/: tests.py
